fix : fix overflow right

--- a/src/home/heroGreen/herogreen.scss
+++ b/src/home/heroGreen/herogreen.scss
@@ -6,7 +6,7 @@ $margin: 3rem;
     position: relative;
     color: white;
     background-color: rgb(30, 94, 30);
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
 
     .text-part {
